# open_conan_deps

./: CMakeLists.txt  Readme.txt  conanbuildinfo.cmake  conanfile.py  test.py
app/: CMakeLists.txt  conanfile.py  main.cpp
chat/: CMakeLists.txt  FindChat.cmake  chat.cpp  conanfile.py
chat/test_package/: CMakeLists.txt  conanfile.py
hello/: CMakeLists.txt  FindHello.cmake  conanfile.py  hello.cpp  main.cpp
hello/test_package/: CMakeLists.txt  conanfile.py
project/: CMakeLists.txt  conanfile.py  project.py  test.py
say/: CMakeLists.txt  FindSay.cmake  conanfile.py  say.cpp  say.h
say/test_package/: CMakeLists.txt  conanfile.py  example.cpp
